<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <ImageView
        android:id="@+id/img_item_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_name"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_item_repository"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:text="@string/users_repository"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_view_follower"
        app:layout_constraintTop_toTopOf="@+id/tv_view_follower" />

    <TextView
        android:id="@+id/follower"
        style="@style/content"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/follower"
        app:layout_constraintEnd_toEndOf="@+id/tv_view_follower"
        app:layout_constraintStart_toStartOf="@+id/tv_view_follower"
        app:layout_constraintTop_toBottomOf="@+id/tv_view_follower" />

    <TextView
        android:id="@+id/repository"
        style="@style/content"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/repository"
        app:layout_constraintEnd_toEndOf="@+id/tv_item_repository"
        app:layout_constraintStart_toStartOf="@+id/tv_item_repository"
        app:layout_constraintTop_toTopOf="@+id/follower" />

    <TextView
        android:id="@+id/following"
        style="@style/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following"
        app:layout_constraintEnd_toEndOf="@+id/tv_view_following"
        app:layout_constraintStart_toStartOf="@+id/tv_view_following"
        app:layout_constraintTop_toTopOf="@+id/follower" />

    <TextView
        android:id="@+id/tv_view_following"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/users_following"
        app:layout_constraintEnd_toStartOf="@+id/tv_view_follower"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_view_follower" />

    <TextView
        android:id="@+id/tv_item_name"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/users_name"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_view_follower"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/users_follower"
        app:layout_constraintEnd_toEndOf="@+id/tv_item_username"
        app:layout_constraintStart_toStartOf="@+id/tv_item_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_username" />

    <TextView
        android:id="@+id/tv_item_username"
        style="@style/content"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:text="@string/users_username"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/img_item_avatar"
        app:layout_constraintStart_toStartOf="@+id/img_item_avatar"
        app:layout_constraintTop_toBottomOf="@+id/img_item_avatar" />


    <ImageView
        android:id="@+id/img_item_company"
        style="@style/mode"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/company"
        android:src="@drawable/ic_baseline_work_24"
        app:layout_constraintStart_toStartOf="@+id/following"
        app:layout_constraintTop_toBottomOf="@+id/following" />

    <TextView
        android:id="@+id/tv_item_company"
        style="@style/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/users_company"
        app:layout_constraintBottom_toBottomOf="@+id/img_item_company"
        app:layout_constraintEnd_toEndOf="@+id/repository"
        app:layout_constraintStart_toEndOf="@+id/img_item_company"
        app:layout_constraintTop_toTopOf="@+id/img_item_company" />

    <ImageView
        android:id="@+id/img_item_location"
        style="@style/mode"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/location"
        android:src="@drawable/ic_baseline_location_city_24"
        app:layout_constraintStart_toStartOf="@+id/img_item_company"
        app:layout_constraintTop_toBottomOf="@+id/img_item_company" />

    <TextView
        android:id="@+id/tv_item_location"
        style="@style/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/users_location"
        app:layout_constraintBottom_toBottomOf="@+id/img_item_location"
        app:layout_constraintEnd_toEndOf="@+id/tv_item_company"
        app:layout_constraintStart_toStartOf="@+id/tv_item_company"
        app:layout_constraintTop_toTopOf="@+id/img_item_location" />



    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_location" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        app:layout_constraintVertical_bias="0.0" >

</androidx.viewpager2.widget.ViewPager2>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

    <ToggleButton
        android:id="@+id/fvuser"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:textOn=""
        android:textOff=""
        android:focusableInTouchMode="false"
        android:focusable="false"
        android:background="@drawable/favorite_toggle"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toEndOf="@+id/img_item_avatar"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>